# Wet1-Structs

./: AVL_tests.h  Artist.cpp  Artist.h  AvlTree.h  CMakeLists.txt  List.cpp  List.h  MusicManager.cpp  MusicManager.h  MusicManger_sari_tests.h  README.md  Wet1_Tasks.docx  dry1.docx  libary1.cpp  library1.cpp  main.cpp  main_alon.cpp  ~$dry1.docx  ~$t1_Tasks.docx  ~WRL0424.tmp
Tests/WhatsApp/: AVLTreeTest (1) (1).cpp
